Versão Inicial do Gráfico no Angular

--- a/src/app/pages/cliente/cliente.component.html
+++ b/src/app/pages/cliente/cliente.component.html
@@ -11,8 +11,8 @@
             </thead>
             <tbody>
               <tr *ngFor="let v of valores">
-                <td>{{v.data}}</td>
-                <td>{{v.valorFinal}}</td>
+                <td>{{v.date}}</td>
+                <td>{{v.close}}</td>
               </tr>
             </tbody>
         </table>
