--- a/src/app/bolsa-valores/bolsa-valores.component.html
+++ b/src/app/bolsa-valores/bolsa-valores.component.html
@@ -1,1 +1,7 @@
-<p>bolsa-valores works!</p>
+
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Gráfico Customizado - <small>MAGAZINE LUIZA</small></h1>
+</div>
+ 
+ 
+<div id="chartContainer" style="height: 500px; width: 80%;"></div>
