Versão Atualizada do Gráfico e do Data Table de Dados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,18 @@
-<router-outlet></router-outlet>
-teste
+
+<div class="container">        
+    <div class="card">
+      <div class="card-header">
+        <h3>Home Broker ABC - Magazine Luiza</h3>
+      </div>
+      <div class="card-body">
+        <a href="bolsavalores" class="btn btn-danger">Gráfico</a>
+        <a href="reports" class="btn btn-danger">Dados</a>
+        <br><br>
+        
+            <!--Rotas do Angular -->
+            <router-outlet></router-outlet>
+        
+      </div>
+    </div>
+  </div>
+
