--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,16 +1,27 @@
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Financial Reports - <small>Magazine Luiza - MGLU3.SA</small></h1>
+</div>
 
-
-<div class="container">
-    <h3>Financial Reports - Magazine Luiza</h3>
-    
-    <div class="card">
-      <div class="card-header">
-        Featured
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
+<div class="table-responsive">
+    <table id="financial-table" class="table" datatable [dtOptions]="dtOptions" class="row-border hover">
+        <thead class="thead-light">
+            <tr>
+                <th>Data</th>
+                <th>Open</th>
+                <th>High</th>
+                <th>Low</th>
+                <th>Close</th>                                 
+            </tr>
+        </thead>
+        <tbody>
+            
+            <tr *ngFor="let v of valores">
+                <td>{{v.date}}</td>
+                <td>{{v.open}}</td>
+                <td>{{v.high}}</td>
+                <td>{{v.low}}</td>
+                <td>{{v.close}}</td>
+              </tr>
+        </tbody>
+    </table>
+</div>
